--- a/_header.sass
+++ b/_header.sass
@@ -1,1 +1,8 @@
 header
+    padding: 50px
+    .imgbox
+        width: 300px
+    nav
+        a    
+            margin-right: 20px
+            font-size: 30px
