--- a/_header.sass
+++ b/_header.sass
@@ -1,8 +1,14 @@
 header
-    padding: 50px
+    position: absolute
+    right: 70px
+    top: 30px
     .imgbox
-        width: 300px
+        width: 120px
+        margin: 0 480px 0 0px 
     nav
+        margin: 0 300px 0 0px
         a    
             margin-right: 20px
-            font-size: 30px
+            font-size: 15px
+            color: #ffffff
+        
