--- a/_welcome.sass
+++ b/_welcome.sass
@@ -1,1 +1,7 @@
 #welcome
+    .box
+        width: 1500px
+        height: 600px
+        background-image: url("Ass-1/header-bg.jpg")
+        background-size: cover
+        background-position: center 
