--- a/_welcome.sass
+++ b/_welcome.sass
@@ -24,7 +24,7 @@
                 top: 380px
                 right: 760px
                 padding: 10px 35px
-                background-color: #d8db08
+                background-color: #ffc800
                 font-size: 20px
                 border-radius: 5px
                 color: #ffffff
