--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ a:hover {
   color: black;
 }
 
+.imgbox img {
+  width: 100%;
+}
+
 header {
   position: absolute;
   right: 70px;
@@ -57,8 +61,111 @@ header nav a {
   top: 380px;
   right: 760px;
   padding: 10px 35px;
-  background-color: #d8db08;
+  background-color: #ffc800;
   font-size: 20px;
   border-radius: 5px;
   color: #ffffff;
+}
+
+#services {
+  padding: 100px;
+}
+#services h1 {
+  font-size: 50px;
+  margin: 0 0 5px 170px;
+  font-weight: 700;
+}
+#services h2 {
+  margin: 20px 0 0 160px;
+  font-size: 20px;
+}
+#services .box {
+  margin: 50px 0 0 200px;
+  font-size: 90px;
+  width: 170px;
+  height: 170px;
+  border-radius: 90px;
+  background-color: #ffc800;
+  padding: 35px 0 0 30px;
+  color: #ffffff;
+}
+#services .textbox {
+  padding: 5px;
+}
+#services .textbox h1 {
+  font-size: 10px;
+  margin-bottom: 90px;
+  line-height: 1.6;
+}
+#services .textbox h2 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 10px 0 10px 150px;
+}
+#services .box1 {
+  margin: 50px 0 0 200px;
+  font-size: 90px;
+  width: 170px;
+  height: 170px;
+  border-radius: 90px;
+  background-color: #ffc800;
+  padding: 35px 0 0 45px;
+  color: #ffffff;
+}
+
+#portfolio {
+  padding: 50px;
+}
+#portfolio h1 {
+  font-size: 50px;
+  font-weight: 700;
+  margin: 0 0 0 70px;
+}
+#portfolio h2 {
+  font-size: 20px;
+  margin: 10px 0 55px 55px;
+}
+#portfolio .box1 {
+  margin: 50px 0 0 50px;
+}
+#portfolio .box1 .imgbox {
+  width: 420px;
+}
+#portfolio .box1 .textbox h1 {
+  margin: 30px 0 10px 145px;
+  font-size: 40px;
+}
+#portfolio .box1 .textbox h2 {
+  margin: 10px 0 0 155px;
+  font-size: 25px;
+}
+#portfolio .box1 .textbox1 h1 {
+  margin: 30px 0 10px 145px;
+  font-size: 40px;
+}
+#portfolio .box1 .textbox1 h2 {
+  margin: 10px 0 0 135px;
+  font-size: 25px;
+}
+#portfolio .box2 {
+  margin: 50px 0 0 50px;
+}
+#portfolio .box2 .imgbox {
+  width: 420px;
+}
+#portfolio .box2 .textbox h1 {
+  margin: 30px 0 10px 150px;
+  font-size: 40px;
+}
+#portfolio .box2 .textbox h2 {
+  margin: 10px 0 0 150px;
+  font-size: 25px;
+}
+#portfolio .box2 .textbox1 h1 {
+  margin: 30px 0 10px 145px;
+  font-size: 40px;
+}
+#portfolio .box2 .textbox1 h2 {
+  margin: 10px 0 0 150px;
+  font-size: 25px;
 }/*# sourceMappingURL=style.css.map */
