--- a/style.css
+++ b/style.css
@@ -168,4 +168,42 @@ header nav a {
 #portfolio .box2 .textbox1 h2 {
   margin: 10px 0 0 150px;
   font-size: 25px;
+}
+
+#about {
+  padding: 50px;
+}
+#about h1 {
+  font-size: 50px;
+  font-weight: 700;
+  margin: 10px 0 20px 200px;
+}
+#about h2 {
+  font-size: 20px;
+  margin: 10px 0 90px 200px;
+}
+#about .box1 {
+  width: 200px;
+  height: 200px;
+  border: 3px solid #000000;
+  border-radius: 100px;
+}
+#about .box1 .imhbox {
+  width: 200px;
+}
+#about .textbox h3 {
+  margin: 0 10px 10px 440px;
+  font-size: 45px;
+  font-weight: 700;
+}
+#about .textbox h4 {
+  font-size: 45px;
+  font-weight: 700;
+  margin: 0 10px 20px 210px;
+}
+#about .textbox h5 {
+  text-align: right;
+  font-size: 25px;
+  margin: 10px 10px 0 200px;
+  line-height: 1.5;
 }/*# sourceMappingURL=style.css.map */
