--- a/_about.sass
+++ b/_about.sass
@@ -12,9 +12,13 @@
         height: 200px
         border: 3px solid #000000
         border-radius: 100px
-        .imhbox
+        .imgbox
             width: 200px
-            
+    .box
+        border: 3px solid #000000 
+        height: 250px 
+        width: 0px
+        margin: 1px 0 0 100px     
     .textbox
         h3
             margin: 0 10px 10px 440px
@@ -30,6 +34,32 @@
             font-size: 25px
             margin: 10px 10px 0 200px
             line-height: 1.5
+    .box2
+        width: 200px
+        height: 200px
+        border: 3px solid #000000
+        border-radius: 100px
+        margin: 0 0 0 450px
+        .imgbox
+            width: 200px
+            margin: 0 0 0 150px
+    .textbox1
+        h3
+            margin: 0 10px 10px 250px
+            font-size: 45px 
+            font-weight: 700
+           
+        h4 
+            font-size: 45px 
+            font-weight: 700
+            margin: 0 10px 20px 250px
+        h5
+            text-align: left
+            font-size: 25px
+            margin: 10px 10px 0 250px
+            line-height: 1.5        
+    
+       
     
              
             
